fix(streams): reduce number of updates from atoms.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "start": "tsdx watch",
     "build": "tsdx build",
     "test": "tsdx test --passWithNoTests --env jest-environment-jsdom-sixteen",
+    "test:watch": "tsdx test --passWithNoTests --env jest-environment-jsdom-sixteen --watch",
     "lint": "tsdx lint",
     "prepare": "tsdx build",
     "storybook": "start-storybook -p 6006",
