--- a/package.json
+++ b/package.json
@@ -38,6 +38,11 @@
     "singleQuote": true,
     "trailingComma": "all"
   },
+  "resolutions": {
+    "**/typescript": "^4.0.5",
+    "**/@typescript-eslint/eslint-plugin": "^4.6.1",
+    "**/@typescript-eslint/parser": "^4.6.1"
+  },
   "name": "klyva",
   "author": "Meris Bahtijaragic",
   "module": "dist/klyva.esm.js",
@@ -52,6 +57,8 @@
     "@testing-library/react": "^11.0.4",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "@typescript-eslint/eslint-plugin": "^4.6.1",
+    "@typescript-eslint/parser": "^4.6.1",
     "babel-loader": "^8.1.0",
     "husky": "^4.3.0",
     "jest-environment-jsdom-sixteen": "^1.0.3",
@@ -62,7 +69,7 @@
     "ts-loader": "^8.0.3",
     "tsdx": "^0.13.3",
     "tslib": "^2.0.1",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.5"
   },
   "dependencies": {
     "@types/deep-equal": "^1.0.1",
