--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "start": "tsdx watch",
     "build": "tsdx build",
     "test": "tsdx test --passWithNoTests --env jest-environment-jsdom-sixteen",
+    "test:watch": "tsdx test --passWithNoTests --env jest-environment-jsdom-sixteen --watch",
     "lint": "tsdx lint",
     "prepare": "tsdx build",
     "storybook": "start-storybook -p 6006",
@@ -37,6 +38,16 @@
     "singleQuote": true,
     "trailingComma": "all"
   },
+  "// REMOVE WHEN NEW VERSION OF TSDX IS RELEASED1": {},
+  "// REMOVE WHEN NEW VERSION OF TSDX IS RELEASED2": {},
+  "// REMOVE WHEN NEW VERSION OF TSDX IS RELEASED3": {},
+  "// REMOVE WHEN NEW VERSION OF TSDX IS RELEASED4": {},
+  "// REMOVE WHEN NEW VERSION OF TSDX IS RELEASED5": {},
+  "resolutions": {
+    "**/typescript": "^4.0.5",
+    "**/@typescript-eslint/eslint-plugin": "^4.6.1",
+    "**/@typescript-eslint/parser": "^4.6.1"
+  },
   "name": "klyva",
   "author": "Meris Bahtijaragic",
   "module": "dist/klyva.esm.js",
@@ -51,6 +62,8 @@
     "@testing-library/react": "^11.0.4",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "@typescript-eslint/eslint-plugin": "^4.6.1",
+    "@typescript-eslint/parser": "^4.6.1",
     "babel-loader": "^8.1.0",
     "husky": "^4.3.0",
     "jest-environment-jsdom-sixteen": "^1.0.3",
@@ -61,7 +74,7 @@
     "ts-loader": "^8.0.3",
     "tsdx": "^0.13.3",
     "tslib": "^2.0.1",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.5"
   },
   "dependencies": {
     "@types/deep-equal": "^1.0.1",
