--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
   },
   "dependencies": {
     "@types/deep-equal": "^1.0.1",
-    "deep-equal": "^2.0.3",
+    "fast-deep-equal": "^3.1.3",
     "optics-ts": "^1.1.0",
     "rxjs": "^6.6.3"
   }
