fix(examples): use io-ts instead of zod.

--- a/examples/react-derived-atoms/package.json
+++ b/examples/react-derived-atoms/package.json
@@ -9,8 +9,7 @@
   },
   "dependencies": {
     "react-app-polyfill": "^1.0.0",
-    "todomvc-app-css": "^2.3.0",
-    "zod": "^2.0.0-beta.25"
+    "todomvc-app-css": "^2.3.0"
   },
   "alias": {
     "react": "../../node_modules/react",
