--- a/examples/todo/package.json
+++ b/examples/todo/package.json
@@ -8,9 +8,10 @@
     "build": "parcel build index.html"
   },
   "dependencies": {
+    "fp-ts": "^2.9.1",
+    "io-ts": "^2.2.13",
     "react-app-polyfill": "^1.0.0",
-    "todomvc-app-css": "^2.3.0",
-    "zod": "^2.0.0-beta.25"
+    "todomvc-app-css": "^2.3.0"
   },
   "alias": {
     "react": "../../node_modules/react",
