--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
     "babel-loader": "^8.1.0",
+    "eslint-plugin-unused-imports": "^1.0.1",
     "husky": "^4.3.0",
     "jest-environment-jsdom-sixteen": "^1.0.3",
     "react": "^16.13.1",
