--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
     "babel-loader": "^8.1.0",
+    "callbag": "^1.3.0",
     "eslint-plugin-unused-imports": "^1.0.1",
     "husky": "^4.3.0",
     "jest-environment-jsdom-sixteen": "^1.0.3",
@@ -79,6 +80,15 @@
   },
   "dependencies": {
     "@types/deep-equal": "^1.0.1",
+    "callbag-behavior-subject": "^1.2.0",
+    "callbag-merge": "^3.2.2",
+    "callbag-merge-map": "^0.0.1",
+    "callbag-pipe": "^1.2.0",
+    "callbag-share": "^1.2.0",
+    "callbag-skip": "^1.1.0",
+    "callbag-subscribe": "^1.5.1",
+    "callbag-take": "^1.5.0",
+    "callbag-tap": "^1.3.0",
     "fast-deep-equal": "^3.1.3",
     "optics-ts": "^2.0.0",
     "rxjs": "^6.6.3"
