--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,3 +40,9 @@ jobs:
         run: yarn build
         env:
           CI: true
+
+      - name: Code Climate Coverage Action
+        uses: paambaati/codeclimate-action@v2.7.4
+        with:
+          coverageCommand: yarn test --coverage
+          debug: true
