--- a/examples/todo/package.json
+++ b/examples/todo/package.json
@@ -10,13 +10,11 @@
   "dependencies": {
     "fp-ts": "^2.9.1",
     "io-ts": "^2.2.13",
+    "klyva": "^0.6.3",
+    "react": "^17.0.1",
     "react-app-polyfill": "^1.0.0",
+    "react-dom": "^17.0.1",
     "todomvc-app-css": "^2.3.0"
-  },
-  "alias": {
-    "react": "../../node_modules/react",
-    "react-dom": "../../node_modules/react-dom/profiling",
-    "scheduler/tracing": "../../node_modules/scheduler/tracing-profiling"
   },
   "devDependencies": {
     "@types/react": "^16.9.11",
