--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "test": "tsdx test --passWithNoTests --env jest-environment-jsdom-sixteen",
     "test:watch": "tsdx test --passWithNoTests --env jest-environment-jsdom-sixteen --watch",
     "lint": "tsdx lint",
-    "prepare": "tsdx build",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "prepare": "tsdx build"
   },
   "peerDependencies": {
     "react": ">=16.8"
@@ -53,12 +51,6 @@
   "module": "dist/klyva.esm.js",
   "devDependencies": {
     "@babel/core": "^7.11.6",
-    "@storybook/addon-actions": "^6.0.21",
-    "@storybook/addon-docs": "^6.0.21",
-    "@storybook/addon-info": "^5.3.21",
-    "@storybook/addon-links": "^6.0.21",
-    "@storybook/addons": "^6.0.21",
-    "@storybook/react": "^6.0.21",
     "@testing-library/react": "^11.0.4",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
