--- a/package.json
+++ b/package.json
@@ -71,11 +71,11 @@
     "typescript": "^4.0.5"
   },
   "dependencies": {
-    "@types/deep-equal": "^1.0.1",
     "callbag-merge": "^3.2.2",
     "callbag-share": "^1.2.0",
     "callbag-subscribe": "^1.5.1",
     "callbag-take": "^1.5.0",
+    "fast-deep-equal": "^3.1.3",
     "optics-ts": "1.1.0"
   },
   "eslintConfig": {
