--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "prepare": "tsdx build"
   },
   "peerDependencies": {
-    "react": ">=16.8"
+    "react": ">=16.8",
+    "react-dom": ">=16.8"
   },
   "husky": {
     "hooks": {
@@ -61,9 +62,7 @@
     "eslint-plugin-unused-imports": "^1.0.1",
     "husky": "^4.3.0",
     "jest-environment-jsdom-sixteen": "^1.0.3",
-    "react": "^16.13.1",
     "react-docgen-typescript-loader": "^3.7.2",
-    "react-dom": "^16.13.1",
     "react-is": "^16.13.1",
     "ts-loader": "^8.0.3",
     "tsdx": "^0.13.3",
@@ -76,7 +75,9 @@
     "callbag-subscribe": "^1.5.1",
     "callbag-take": "^1.5.0",
     "fast-deep-equal": "^3.1.3",
-    "optics-ts": "1.1.0"
+    "optics-ts": "1.1.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "eslintConfig": {
     "extends": [
