--- a/package.json
+++ b/package.json
@@ -67,7 +67,9 @@
     "ts-loader": "^8.0.3",
     "tsdx": "^0.13.3",
     "tslib": "^2.0.1",
-    "typescript": "^4.0.5"
+    "typescript": "^4.0.5",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "dependencies": {
     "callbag-merge": "^3.2.2",
@@ -75,9 +77,7 @@
     "callbag-subscribe": "^1.5.1",
     "callbag-take": "^1.5.0",
     "fast-deep-equal": "^3.1.3",
-    "optics-ts": "1.1.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "optics-ts": "1.1.0"
   },
   "eslintConfig": {
     "extends": [
