--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.8.0",
+  "version": "0.8.1",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -62,14 +62,14 @@
     "eslint-plugin-unused-imports": "^1.0.1",
     "husky": "^4.3.0",
     "jest-environment-jsdom-sixteen": "^1.0.3",
+    "react": "^16.13.1",
     "react-docgen-typescript-loader": "^3.7.2",
+    "react-dom": "^16.13.1",
     "react-is": "^16.13.1",
     "ts-loader": "^8.0.3",
     "tsdx": "^0.13.3",
     "tslib": "^2.0.1",
-    "typescript": "^4.0.5",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "typescript": "^4.0.5"
   },
   "dependencies": {
     "callbag-merge": "^3.2.2",
