--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "callbag-subscribe": "^1.5.1",
     "callbag-take": "^1.5.0",
     "fast-deep-equal": "^3.1.3",
-    "optics-ts": "1.1.0"
+    "optics-ts": "^2.0.0"
   },
   "eslintConfig": {
     "extends": [
