--- a/examples/mega-form/package.json
+++ b/examples/mega-form/package.json
@@ -10,8 +10,7 @@
   "dependencies": {
     "fp-ts": "^2.9.1",
     "io-ts": "^2.2.13",
-    "react-app-polyfill": "^1.0.0",
-    "todomvc-app-css": "^2.3.0"
+    "react-app-polyfill": "^1.0.0"
   },
   "alias": {
     "react": "../../node_modules/react",
