--- a/examples/split-example/package.json
+++ b/examples/split-example/package.json
@@ -8,6 +8,8 @@
     "build": "parcel build index.html"
   },
   "dependencies": {
+    "@blueprintjs/core": "^3.42.0",
+    "@blueprintjs/icons": "^3.26.0",
     "fp-ts": "^2.9.1",
     "io-ts": "^2.2.13",
     "react-app-polyfill": "^1.0.0"
