--- a/package.json
+++ b/package.json
@@ -72,12 +72,14 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
+    "@types/use-sync-external-store": "^0.0.0",
     "callbag-merge": "^3.2.2",
     "callbag-share": "^1.2.0",
     "callbag-subscribe": "^1.5.1",
     "callbag-take": "^1.5.0",
     "fast-deep-equal": "^3.1.3",
-    "optics-ts": "^2.0.0"
+    "optics-ts": "^2.0.0",
+    "use-sync-external-store": "0.0.0-experimental-7d38e4fd8-20210930"
   },
   "eslintConfig": {
     "extends": [
