--- a/examples/klyva-demo/tsconfig.json
+++ b/examples/klyva-demo/tsconfig.json
@@ -4,6 +4,7 @@
     "target": "es5",
     "module": "commonjs",
     "jsx": "react",
+    "noEmit": true,
     "moduleResolution": "node",
     "noImplicitAny": false,
     "noUnusedLocals": false,
