--- a/examples/mega-form/tsconfig.json
+++ b/examples/mega-form/tsconfig.json
@@ -3,6 +3,7 @@
     "allowSyntheticDefaultImports": false,
     "target": "es5",
     "module": "commonjs",
+    "noEmit": true,
     "jsx": "react",
     "moduleResolution": "node",
     "noImplicitAny": false,
@@ -13,14 +14,7 @@
     "preserveConstEnums": true,
     "sourceMap": true,
     "skipLibCheck": true,
-    "lib": [
-      "es2015",
-      "es2016",
-      "dom",
-      "es2019"
-    ],
-    "types": [
-      "node"
-    ]
+    "lib": ["es2015", "es2016", "dom", "es2019"],
+    "types": ["node"]
   }
 }
