--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
   "version": "0.8.6",
   "license": "MIT",
-  "main": "dist/index.js",
+  "main": "./dist/klyva.umd.js",
+  "module": "./dist/klyva.es.js",
+  "exports": {
+    ".": {
+      "import": "./dist/klyva.es.js",
+      "require": "./dist/klyva.umd.js"
+    }
+  },
   "typings": "dist/index.d.ts",
   "repository": {
     "type": "git",
@@ -15,12 +22,12 @@
     "node": ">=10"
   },
   "scripts": {
-    "start": "tsdx watch",
-    "build": "tsdx build",
-    "test": "tsdx test --passWithNoTests --env jest-environment-jsdom-sixteen",
-    "test:watch": "tsdx test --passWithNoTests --env jest-environment-jsdom-sixteen --watch",
-    "lint": "tsdx lint",
-    "prepare": "tsdx build"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "ts-jest --passWithNoTests --env jest-environment-jsdom test",
+    "test:watch": "ts-jest --passWithNoTests --env jest-environment-jsdom --watch test",
+    "lint": "eslint"
   },
   "peerDependencies": {
     "react": ">=18.0",
@@ -28,50 +35,45 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "tsdx lint"
+      "pre-commit": "tsc"
     }
   },
   "prettier": {
     "printWidth": 80,
     "semi": false,
     "singleQuote": true,
-    "trailingComma": "all"
-  },
-  "// REMOVE WHEN NEW VERSION OF TSDX IS RELEASED1": {},
-  "// REMOVE WHEN NEW VERSION OF TSDX IS RELEASED2": {},
-  "// REMOVE WHEN NEW VERSION OF TSDX IS RELEASED3": {},
-  "// REMOVE WHEN NEW VERSION OF TSDX IS RELEASED4": {},
-  "// REMOVE WHEN NEW VERSION OF TSDX IS RELEASED5": {},
-  "resolutions": {
-    "**/typescript": "^4.6.3",
-    "**/@typescript-eslint/eslint-plugin": "^4.6.1",
-    "**/@typescript-eslint/parser": "^4.6.1"
+    "trailingComma": "all",
+    "arrowParens": "avoid"
   },
   "name": "klyva",
   "author": "Meris Bahtijaragic",
-  "module": "dist/klyva.esm.js",
   "devDependencies": {
     "@babel/core": "^7.11.6",
-    "@testing-library/react": "^11.0.4",
+    "@testing-library/react": "^13.0.0",
+    "@types/jest": "^27.4.1",
     "@types/react": "^18.0.3",
     "@types/react-dom": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
     "babel-loader": "^8.1.0",
     "callbag": "^1.3.0",
+    "eslint": "^8.13.0",
     "eslint-plugin-unused-imports": "^1.0.1",
     "husky": "^4.3.0",
-    "jest-environment-jsdom-sixteen": "^1.0.3",
+    "jest": "^27.5.1",
+    "jest-environment-jsdom": "^27.5.1",
     "react": "^18.0.0",
     "react-docgen-typescript-loader": "^3.7.2",
     "react-dom": "^18.0.0",
     "react-is": "^18.0.0",
+    "ts-jest": "^27.1.4",
     "ts-loader": "^8.0.3",
-    "tsdx": "^0.13.3",
     "tslib": "^2.3.1",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "vite": "^2.9.2"
   },
   "dependencies": {
+    "@rollup/plugin-typescript": "^8.3.1",
     "callbag-merge": "^3.2.2",
     "callbag-share": "^1.2.0",
     "callbag-subscribe": "^1.5.1",
@@ -110,5 +112,9 @@
         }
       ]
     }
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "jsdom"
   }
 }
