--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "preview": "vite preview",
     "test": "ts-jest --passWithNoTests --env jest-environment-jsdom test",
     "test:watch": "ts-jest --passWithNoTests --env jest-environment-jsdom --watch test",
-    "lint": "eslint"
+    "lint": "eslint src test"
   },
   "peerDependencies": {
     "react": ">=18.0",
@@ -53,15 +53,19 @@
     "@types/jest": "^27.4.1",
     "@types/react": "^18.0.3",
     "@types/react-dom": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/parser": "^4.6.1",
+    "@typescript-eslint/eslint-plugin": "^5.19.0",
+    "@typescript-eslint/parser": "^5.19.0",
     "babel-loader": "^8.1.0",
     "callbag": "^1.3.0",
     "eslint": "^8.13.0",
-    "eslint-plugin-unused-imports": "^1.0.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^4.3.0",
     "jest": "^27.5.1",
     "jest-environment-jsdom": "^27.5.1",
+    "prettier": "^2.6.2",
     "react": "^18.0.0",
     "react-docgen-typescript-loader": "^3.7.2",
     "react-dom": "^18.0.0",
@@ -82,9 +86,10 @@
     "optics-ts": "^2.2.0"
   },
   "eslintConfig": {
+    "parser": "@typescript-eslint/parser",
     "extends": [
       "react-app",
-      "prettier/@typescript-eslint",
+      "prettier",
       "plugin:prettier/recommended"
     ],
     "settings": {
@@ -93,6 +98,7 @@
       }
     },
     "plugins": [
+      "@typescript-eslint",
       "unused-imports"
     ],
     "rules": {
@@ -101,16 +107,7 @@
         "error"
       ],
       "@typescript-eslint/no-unused-vars": "off",
-      "unused-imports/no-unused-imports-ts": "error",
-      "unused-imports/no-unused-vars-ts": [
-        "warn",
-        {
-          "vars": "all",
-          "varsIgnorePattern": "^_",
-          "args": "after-used",
-          "argsIgnorePattern": "^_"
-        }
-      ]
+      "unused-imports/no-unused-imports-ts": "error"
     }
   },
   "jest": {
