--- a/examples/todo/package.json
+++ b/examples/todo/package.json
@@ -9,7 +9,7 @@
     "postinstall": "cp node_modules/todomvc-app-css/index.css todomvc.css"
   },
   "dependencies": {
-    "klyva": "0.9.9-beta-4",
+    "klyva": "0.9.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "todomvc-app-css": "^2.3.0"
