--- a/examples/klyva-demo/package.json
+++ b/examples/klyva-demo/package.json
@@ -17,8 +17,8 @@
     "scheduler/tracing": "../../node_modules/scheduler/tracing-profiling"
   },
   "devDependencies": {
-    "@types/react": "18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@types/react": "^16.9.24",
+    "@types/react-dom": "^16.9.24",
     "parcel": "^1.12.3",
     "typescript": "^4.6.3"
   }
