--- a/package.json
+++ b/package.json
@@ -14,10 +14,7 @@
     "type": "git",
     "url": "https://github.com/merisbahti/klyva.git"
   },
-  "files": [
-    "dist",
-    "src"
-  ],
+  "files": ["dist", "src"],
   "engines": {
     "node": ">=10"
   },
@@ -30,8 +27,8 @@
     "lint": "eslint src test"
   },
   "peerDependencies": {
-    "react": ">=18.0",
-    "react-dom": ">=18.0"
+    "react": ">=16.8",
+    "react-dom": ">=16.8"
   },
   "husky": {
     "hooks": {
@@ -49,10 +46,10 @@
   "author": "Meris Bahtijaragic",
   "devDependencies": {
     "@babel/core": "^7.11.6",
-    "@testing-library/react": "^13.0.0",
+    "@testing-library/react": "^12.1.5",
     "@types/jest": "^27.4.1",
-    "@types/react": "^18.0.3",
-    "@types/react-dom": "^18.0.0",
+    "@types/react": "^16.9.24",
+    "@types/react-dom": "^16.9.24",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "@typescript-eslint/parser": "^5.19.0",
     "babel-loader": "^8.1.0",
@@ -66,10 +63,10 @@
     "jest": "^27.5.1",
     "jest-environment-jsdom": "^27.5.1",
     "prettier": "^2.6.2",
-    "react": "^18.0.0",
+    "react": "^16.13.1",
     "react-docgen-typescript-loader": "^3.7.2",
-    "react-dom": "^18.0.0",
-    "react-is": "^18.0.0",
+    "react-dom": "^16.13.1",
+    "react-is": "^16.13.1",
     "ts-jest": "^27.1.4",
     "ts-loader": "^8.0.3",
     "tslib": "^2.3.1",
@@ -78,34 +75,27 @@
   },
   "dependencies": {
     "@rollup/plugin-typescript": "^8.3.1",
+    "@types/use-sync-external-store": "^0.0.6",
     "callbag-merge": "^3.2.2",
     "callbag-share": "^1.2.0",
     "callbag-subscribe": "^1.5.1",
     "callbag-take": "^1.5.0",
     "fast-deep-equal": "^3.1.3",
-    "optics-ts": "^2.2.0"
+    "optics-ts": "^2.2.0",
+    "use-sync-external-store": "^1.2.0"
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
-    "extends": [
-      "react-app",
-      "prettier",
-      "plugin:prettier/recommended"
-    ],
+    "extends": ["react-app", "prettier", "plugin:prettier/recommended"],
     "settings": {
       "react": {
         "version": "detect"
       }
     },
-    "plugins": [
-      "@typescript-eslint",
-      "unused-imports"
-    ],
+    "plugins": ["@typescript-eslint", "unused-imports"],
     "rules": {
       "no-redeclare": "off",
-      "@typescript-eslint/no-redeclare": [
-        "error"
-      ],
+      "@typescript-eslint/no-redeclare": ["error"],
       "@typescript-eslint/no-unused-vars": "off",
       "unused-imports/no-unused-imports-ts": "error"
     }
