--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.9.0",
+  "version": "0.9.0-sean-banan",
   "license": "MIT",
   "main": "./dist/index.js",
   "module": "./dist/index.es.js",
@@ -14,7 +14,10 @@
     "type": "git",
     "url": "https://github.com/merisbahti/klyva.git"
   },
-  "files": ["dist", "src"],
+  "files": [
+    "dist",
+    "src"
+  ],
   "engines": {
     "node": ">=10"
   },
@@ -86,16 +89,25 @@
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
-    "extends": ["react-app", "prettier", "plugin:prettier/recommended"],
+    "extends": [
+      "react-app",
+      "prettier",
+      "plugin:prettier/recommended"
+    ],
     "settings": {
       "react": {
         "version": "detect"
       }
     },
-    "plugins": ["@typescript-eslint", "unused-imports"],
+    "plugins": [
+      "@typescript-eslint",
+      "unused-imports"
+    ],
     "rules": {
       "no-redeclare": "off",
-      "@typescript-eslint/no-redeclare": ["error"],
+      "@typescript-eslint/no-redeclare": [
+        "error"
+      ],
       "@typescript-eslint/no-unused-vars": "off",
       "unused-imports/no-unused-imports-ts": "error"
     }
