--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.9.0-sean-banan-3",
+  "version": "0.10.0",
   "license": "MIT",
   "main": "./dist/index.js",
   "module": "./dist/index.es.js",
